# opengl-project-template

./: CMakeLists.txt  README.md
scripts/: Build.bat  Compile.bat
src/: Main.cpp
